[package]
name = "torrentox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.90"
clap = { version = "4.5", features = ["derive"] }
color-eyre = { version = "0.6", feature = ["wrap_err"] }
colored = "2.1.0"
ctor = "0.2.8"
log = "0.4.22"
log4rs = "1.3"
reqwest = "0.12.9"
rusqlite = "0.32.1"
serde = "1.0.210"
serde_bencode = "0.2.4"
serde_bytes = "0.11.15"
serde_derive = "1.0.210"
thiserror = "1.0.63"


