[package]
name = "torrentox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.5", features = ["derive", "cargo"] }
color-eyre =  "0.6"
colored = "2.1.0"
ctor = "0.2.8"
eyre = "0.6.12"
log = "0.4.22"
log4rs = "1.3"
rand = "0.9.0"
reqwest = {version = "0.12.9", features= ["blocking"]}
rusqlite ={version = "0.32.1", features = ["bundled"]}
serde = "1.0.210"
serde_bencode = "0.2.4"
serde_bytes = "0.11.15"
serde_derive = "1.0.210"
serde_urlencoded = "0.7.1"
sha-1 = "0.10.1"
thiserror = "1.0.63"
tokio = { version = "1.44.2", features = ["rt", "macros"] }
url = "2.5.4"
urlencoding = "2.1.3"


